# kenshi-coop

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  build.bat  faction-slots.json  install.bat  kenshi-online-16.mod  kenshi-online.mod  kenshi-online.mod.orig-backup-2026-06-03  setup.bat  test_multiplayer.bat
.claude/agents/: game-reverse-engineer.md
KenshiMP.Common/: CMakeLists.txt
KenshiMP.Common/src/: compression.cpp  config.cpp  protocol.cpp  serialization.cpp
KenshiMP.Core/: CMakeLists.txt  core.cpp  core.h  game_command_queue.h
KenshiMP.Core/game/: asset_facilitator.cpp  asset_facilitator.h  game_character.cpp  game_faction.cpp  game_offset_prober.cpp  game_offset_prober.h  game_stats.cpp  game_types.h  game_world.cpp  loading_orchestrator.h  lobby_manager.cpp  player_controller.cpp  player_controller.h  shared_save_sync.cpp  spawn_manager.cpp  spawn_manager.h
KenshiMP.Core/hooks/: ai_hooks.cpp  ai_hooks.h  building_hooks.cpp  char_tracker_hooks.cpp  char_tracker_hooks.h  combat_hooks.cpp  combat_hooks.h  entity_hooks.cpp  entity_hooks.h  faction_hooks.cpp  faction_hooks.h  game_tick_hooks.cpp  game_tick_hooks.h  input_hooks.cpp  inventory_hooks.cpp  render_hooks.cpp  resource_hooks.cpp  resource_hooks.h  save_hooks.cpp  save_hooks.h  squad_hooks.h  squad_spawn_hooks.cpp  time_hooks.h  world_hooks.h
KenshiMP.Core/net/: client.cpp  packet_handler.cpp  server_query.h
KenshiMP.Core/sdk/: kenshi_sdk.cpp  visual_proxy.cpp  visual_proxy.h
KenshiMP.Core/sync/: authority_validator.cpp  authority_validator.h  deferred_spawn_queue.cpp  deferred_spawn_queue.h  entity_registry.cpp  entity_registry.h  ownership.cpp  pending_snapshot_queue.cpp  pending_snapshot_queue.h  pipeline_orchestrator.cpp  pipeline_orchestrator.h  player_engine.h  (+4 more)
KenshiMP.Injector/: CMakeLists.txt  injector.cpp  injector.h  main.cpp  process.cpp  process.h  resource.rc
KenshiMP.IntegrationTest/: CMakeLists.txt  main.cpp
KenshiMP.LiveTest/: CMakeLists.txt  main.cpp
KenshiMP.MasterServer/: CMakeLists.txt  main.cpp
KenshiMP.Scanner/: CMakeLists.txt
KenshiMP.Scanner/include/kmp/: call_graph.h  function_analyzer.h  hook_manager.h  memory.h  mov_rax_rsp_fix.h  orchestrator.h  patterns.h  pdata_enumerator.h  safe_hook.h  scanner.h  scanner_engine.h  string_analyzer.h  vtable_scanner.h
KenshiMP.Scanner/src/: call_graph.cpp  function_analyzer.cpp  hook_manager.cpp  memory.cpp  mov_rax_rsp_fix.cpp  orchestrator.cpp  patterns.cpp  pdata_enumerator.cpp  scanner.cpp  scanner_engine.cpp  string_analyzer.cpp  vtable_scanner.cpp
KenshiMP.Server/: CMakeLists.txt  authority_validator.cpp  authority_validator.h  combat_resolver.cpp  entity_manager.h  game_state.cpp  main.cpp  player_manager.cpp  server.cpp  server.h  upnp.cpp  world_persistence.cpp
KenshiMP.TestClient/: CMakeLists.txt  main.cpp
KenshiMP.UnitTest/: CMakeLists.txt  main.cpp
_re-tools/: _bytes.py  _ctorscan.py  _fn.py  _resolve.py  _scan448.py  _scanE8.py  _slot.py  _slots.py  _t2.py  _t3.py  _thunk.py  _vt.py  _xref2.py  _xref_vt.py  anim_e8_setter.py  anim_e8_setter2.py  aob.py  dis2.py  disrange.py  final_check.py  find_callers.py  find_refs.py  find_xrefs.py  findstart.py  floats.py  funcstart.py  k_2c8wide.py  k_494.py  k_6e9.py  k_allvirt2c8.py  k_branch.py  k_callers.py  k_callers2.py  k_ctor.py  k_ctxt.py  k_disf.py  k_disfull.py  k_final.py  k_findwidgetvt.py  k_hudvt.py  (+93 more)
docs/: API.md  AUTHORITY-IMPLEMENTATION-COMPLETE.md  AUTONOMOUS-LOOP-COMPLETE-2026-06-04.md  BUILD.md  CODE_CLEANUP_REPORT.md  DEPLOYMENT.md  HOOKS.md  Kenshi-Online-Technical-Reference.md  LOOP-STATUS-2026-06-04.md  MULTIPLAYER-FIXES-2026-06-04.md  PHASES.md  PROTOCOL.md  REVERSE_ENGINEERING.md  TESTING.md  audit-2026-06-03-gap-report.json  authority-architecture-audit-2026-06-04.md  authority-progress-2026-06-04.md  english.md  offsets.json  patterns.json  russian.md
rebuild/: CMakeLists.txt
rebuild/server/: CMakeLists.txt  entity_manager.cpp  game_state.h  main.cpp  player_manager.h  server.cpp  upnp.h  zone_manager.cpp  zone_manager.h
rebuild/src/: CMakeLists.txt  core.cpp  core.h  dllmain.cpp  game_command_queue.h
rebuild/src/game/: game_building.cpp  game_character.cpp  game_faction.cpp  game_inventory.cpp  game_inventory.h  game_squad.cpp  game_types.h  game_world.cpp  loading_orchestrator.cpp  lobby_manager.h  shared_save_sync.cpp  shared_save_sync.h  spawn_manager.cpp
rebuild/src/hooks/: ai_hooks.h  building_hooks.h  char_tracker_hooks.cpp  char_tracker_hooks.h  input_hooks.h  inventory_hooks.h  movement_hooks.cpp  movement_hooks.h  render_hooks.cpp  render_hooks.h  squad_hooks.cpp  squad_spawn_hooks.h  time_hooks.cpp  world_hooks.cpp
rebuild/src/net/: client.h  packet_handler.cpp  server_query.cpp
rebuild/src/sdk/: kenshi_sdk.h
rebuild/src/sync/: entity_resolver.cpp  entity_resolver.h  interpolation.cpp  interpolation.h  pipeline_orchestrator.cpp  pipeline_state.h  player_engine.cpp  sync_facilitator.cpp  sync_orchestrator.cpp  sync_orchestrator.h  zone_engine.h
rebuild/src/sys/: command_registry.cpp  task_orchestrator.cpp  task_orchestrator.h
rebuild/src/ui/: mygui_bridge.h  native_hud.h  native_menu.cpp  overlay.h
rebuild/testrun/: server.json  world.kmpsave
tools/: disasm_context.py  disasm_livebranch.py  fix_mod_gamestarts.py  peek_funcs.py  re_allchar_getctl.py  re_caller872.py  re_charvtbl.py  re_charvtbl2.py  re_check_factionmgr_global.py  re_ctx_nameless.py  re_disasm_range.py  re_faction_0x34.py  re_faction_0x34b.py  re_faction_0x34c.py  re_faction_fix.py  re_factionmgr.py  re_find_nameless_anchors.py  re_findvtbl.py  re_fix2_writer.py  re_func86db80.py  re_getcontroller.py  re_getctl2.py  re_livebranch_ctx.py  re_melee_flow.py  re_melee_flow2.py  re_melee_flow3.py  re_melee_flow4.py  re_melee_flow5.py  re_melee_flow6.py  re_melee_flow7.py  re_scanner.py  re_setcontrolledchar.py  re_setctl_callers.py  re_setfaction.py  re_verify_nameless.py  re_vtbl58_full.py  re_xref_nameless_str.py  rebase_mod.py  resolve_vtable.py  set_player_squad_faction_nameless.py  (+1 more)
(+87 files in other folders)
